--- a/app/src/main/res/layout-port/launcher.xml
+++ b/app/src/main/res/layout-port/launcher.xml
@@ -16,7 +16,7 @@
 
 <com.cyanogenmod.trebuchet.DragLayer
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:launcher="http://schemas.android.com/apk/res/com.cyanogenmod.trebuchet"
+    xmlns:launcher="http://schemas.android.com/apk/res-auto"
 
     android:id="@+id/drag_layer"
     android:layout_width="match_parent"
@@ -50,15 +50,6 @@
         launcher:scrollIndicatorPaddingLeft="@dimen/workspace_divider_padding_left"
         launcher:scrollIndicatorPaddingRight="@dimen/workspace_divider_padding_right" />
 
-    <include layout="@layout/hotseat"
-        android:id="@+id/hotseat"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/button_bar_height_plus_padding"
-        android:layout_gravity="bottom" />
-
-    <include
-        android:id="@+id/qsb_bar"
-        layout="@layout/qsb_bar" />
 
     <include layout="@layout/apps_customize_pane"
         android:id="@+id/apps_customize_pane"
@@ -77,4 +68,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone" />
+    <include
+        android:id="@+id/qsb_bar"
+        layout="@layout/qsb_bar" />
+    <include layout="@layout/hotseat"
+        android:id="@+id/hotseat"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_bar_height_plus_padding"
+        android:layout_gravity="bottom" />
 </com.cyanogenmod.trebuchet.DragLayer>
